--- a/__CORE__/src/renderer/src/assets/styles.css
+++ b/__CORE__/src/renderer/src/assets/styles.css
@@ -1,9 +1,55 @@
+:root {
+  --padding: 10px;
+  --margin: 0;
+  --border-radius: 8px;
+  --max-height: calc(100vh - 2 * var(--padding));
+  -webkit-app-region: drag;
+  cursor: drag;
+}
+
+html {
+  background: transparent;
+  width: 100%;
+  cursor: drag;
+  -webkit-app-region: drag;
+}
+
 body {
-  padding: 8px;
-  background-color: rgb(24, 24, 24);
-  margin: 0;
-  height: 100vh;
+  cursor: drag;
+  padding: var(--padding);
+  margin: var(--margin);
+  background: transparent;
   box-sizing: border-box;
+  min-height: 100vh;
+  min-width: 100vw;
+  display: flex;
+  flex-direction: column;
+  gap: var(--padding);
+  overflow: hidden;
+  user-select: none;
+  -webkit-app-region: drag;
+}
+
+header {
+  -webkit-app-region: drag;
+}
+
+webview,
+.splash {
+  flex: 1;
+  min-width: 100%;
+  height: 100%;
+  border-radius: var(--border-radius);
+  overflow: hidden;
+  box-sizing: border-box;
+}
+
+webview {
+  -webkit-app-region: no-drag;
+}
+
+#core {
+  display: contents;
 }
 
 #drag {
@@ -12,30 +58,4 @@ body {
 
 #no-drag {
   -webkit-app-region: no-drag;
-}
-
-.navbar {
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  border-radius: 8px;
-  height: 40px;
-  backdrop-filter: blur(10px);
-  z-index: 1000;
-  background-color: rgba(41, 41, 41, 0.837);
-  padding: 20px;
-  box-sizing: border-box;
-  z-index: 10;
-}
-
-webview {
-  position: absolute;
-  inset: 0;
-  width: 100%;
-  min-height: calc(100vh - 80px);
-  border-radius: 8px;
-  overflow: hidden;
-  box-sizing: border-box;
 }
